WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163951
LOG_WITH_STREAM() macro should not have a semi colon at the end
https://bugs.webkit.org/show_bug.cgi?id=163951
Summary
LOG_WITH_STREAM() macro should not have a semi colon at the end
Chris Dumez
Reported
2016-10-25 10:05:44 PDT
LOG_WITH_STREAM() macro should not have a semi colon at the end
Attachments
Patch
(1.17 KB, patch)
2016-10-25 10:06 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-10-25 10:06:55 PDT
Created
attachment 292770
[details]
Patch
WebKit Commit Bot
Comment 2
2016-10-25 12:23:49 PDT
Comment on
attachment 292770
[details]
Patch Clearing flags on attachment: 292770 Committed
r207833
: <
http://trac.webkit.org/changeset/207833
>
WebKit Commit Bot
Comment 3
2016-10-25 12:23:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug