LOG_WITH_STREAM() macro should not have a semi colon at the end https://bugs.webkit.org/show_bug.cgi?id=163951

Reviewed by Simon Fraser.

* platform/LogMacros.h:


Canonical link: https://commits.webkit.org/181690@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@207833 268f45cc-cd09-0410-ab3c-d52691b4dbfc